--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
 #insta{
     margin: 10px 40px;
 }
+/* ************************************************************* */
+/* game section style*/
 
+/* ************************************************************* */
 @media screen and (min-width: 1200px){ 
     .desktopcenter { 
       width: 600px; 
